--- a/plataforma/templates/pages/nos_create_form.html
+++ b/plataforma/templates/pages/nos_create_form.html
@@ -60,7 +60,7 @@
           </div>
           <div class="col-md-6">
             <div class="upload-background">
-              {% if form.imagem %}
+              {% if form.imagem.value %}
                 <img class="inline-block upload-image" src="{{ form.imagem.value.url }}" alt="Prsp">
               {% else %}
                 <img class="inline-block upload-image" src="{% static 'img/prospera-modal.png' %}" alt="Prsp">
