--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -10,8 +10,8 @@
     <img class="logo" src="{% static 'img/prospera-logo.png' %}" alt="Prospera">
 
     <div class="prospera-margin text-center">
-      <a class="btn btn-prospera btn-lg" href="{% url 'login' %}" role="button">Entrar</a>
-      <a class="btn btn-prospera btn-lg" href="{% url 'no_create' %}" role="button">Criar Conta</a>
+      <a id="btn-login" class="btn btn-prospera btn-lg" role="button">Entrar</a>
+      <a id="btn-registro" class="btn btn-prospera btn-lg" role="button">Criar Conta</a>
     </div>
 
     <div class="prospera-margin text-center">
