--- a/plataforma/templates/pages/no_create_form.html
+++ b/plataforma/templates/pages/no_create_form.html
@@ -1,27 +1,17 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
+{% block bodyclass %}class="registro"{% endblock %}
 {% block content %}
 
-<div class="create-account">
-    <h2>Nova Conta</h2>
-    <form method="POST">
-        {% if form.non_field_errors %}
-        <div class="alert alert-danger alert-dismissible" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          {% for err in form.non_field_errors %}
-            {{ err }}
-          {% endfor %}
+<div id="registro">
+  <div class="" id="modalRegister">
+    <div class="modal-dialog modal-md" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          {% include 'pages/partial_register.html' %}
         </div>
-      {% endif %}
-      {% csrf_token %}
-
-      {% for field in form %}
-        <div class="form-group{% if field.errors%} has-error{% endif %}">
-               <input id="{{ field.auto_id }}" class="form-control" placeholder="{{ field.label }}" name="{{ field.name }}" type="{{ field.field.widget.input_type }}">
-         <span class="help-block">{{ field.errors }}</span>
-              </div>
-      {% endfor %}
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Criar Conta</button>
-    </form>
+      </div>
+    </div>
+  </div>
 </div>
-
 {% endblock %}
