--- a/plataforma/templates/pages/partial_login.html
+++ b/plataforma/templates/pages/partial_login.html
@@ -6,7 +6,7 @@
     <form action="" method="post" class="formAccessAjax" id="formLoginModal">
       {% csrf_token %}
       <div class="form-group">
-        <input type="text" id="nome" name="nome" placeholder="USUÁRIO" class="form-control" />
+        <input type="text" id="username" name="username" placeholder="USUÁRIO" class="form-control" />
         <p class="help-block"></p>
       </div>
       <div class="form-group">
