--- a/plataforma/templates/registration/login.html
+++ b/plataforma/templates/registration/login.html
@@ -1,8 +1,20 @@
 {% extends 'base.html' %}
 
+{% block bodyclass %}class="login"{% endblock %}
 {% block content %}
-  <div class="login">
-    <h2>Login</h2>
+
+  <div id="login">
+
+    <div class="" id="modalLogin">
+      <div class="modal-dialog modal-md" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            {% include 'pages/partial_login.html' %}
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <h2>Login</h2>
     <form method="POST">
       {% if form.non_field_errors %}
         <div class="alert alert-danger alert-dismissible" role="alert">
@@ -42,7 +54,7 @@
       <div class="col-md-2">
         <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-primary btn-google"><i class="fa fa-google" aria-hidden="true"></i></a>
       </div>
-    </div>
+    </div> -->
   </div>
 
 {% endblock %}
