--- a/plataforma/templates/pages/no_create_form.html
+++ b/plataforma/templates/pages/no_create_form.html
@@ -8,7 +8,7 @@
     <div class="modal-dialog modal-md" role="document">
       <div class="modal-content">
         <div class="modal-body">
-          {% include 'pages/partial_register.html' %}
+          {% include 'pages/partial_register.html' with noajax='yes' %}
         </div>
       </div>
     </div>
