--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -39,7 +39,7 @@
               <li>
                 <a class="scroll" id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user }}</a>
                 <ul class="dropdown-menu" aria-labelledby="dLabel">
-                  <li><a href="">>> Perfil</a></li>
+                  <li><a href="{% url "no_detail" %}">>> Perfil</a></li>
                   <li><a href="{% url "logout" %}">>> Sair</a></li>
                 </ul>
               </li>
