--- a/plataforma/templates/registration/login.html
+++ b/plataforma/templates/registration/login.html
@@ -9,7 +9,7 @@
       <div class="modal-dialog modal-md" role="document">
         <div class="modal-content">
           <div class="modal-body">
-            {% include 'pages/partial_login.html' %}
+            {% include 'pages/partial_login.html' with noajax='yes' %}
           </div>
         </div>
       </div>
