Adicionando tabelas para Nó

--- a/plataforma/templates/pages/no_detail.html
+++ b/plataforma/templates/pages/no_detail.html
@@ -7,7 +7,7 @@
   <section class="descricao-content container">
     <div class="row">
       <h1>+ Nó +</h1>
-      <div class="col-md-4">
+      <div class="col-md-2">
       {% if nodo.imagem %}
         <img class="no-imagem" src="{{ nodo.imagem.url }}" alt="...">
         {% else %}
@@ -15,8 +15,80 @@
       {% endif %}
       </div>
       <div class="col-md-6">
-        <h1 class="objeto-title">{{ nodo.nome }}</h1>
+        <h1 class="no-title">{{ nodo.user }}</h1>
       </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-2">
+        <p class="quem-sou">{{ nodo.quem_sou }} Em 1937 o economista Ronald Coase publicou o artigo A Natureza da Firma: origem, evolução e desenvolvimento, onde afirma que as organizações surgem para atuar nos mercados com o objetivo de diminuir os custos de transação (custos de busca e aquisição, de contratação e controle, de coordenação e de confiança). Em 1937 o economista Ronald Coase publicou o artigo A Natureza da Firma: origem, evolução e desenvolvimento, onde afirma que as organizações surgem para atuar nos mercados com o objetivo de diminuir os custos de transação (custos de busca e aquisição, de contratação e controle, de coordenação e de confiança).</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="prospera-margin prsps-dist text-center container">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Quanto ganhou<br> com a Prospera</th>
+            <th>Quanto contribuiu<br> para o nós</th>
+            <th>Quanto recebeu<br> como nós</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td scope="row"><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
+            <td>100.000</td>
+            <td>10.000</td>
+            <td>20.000</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <h3>Transações</h3>
+
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Age</th>
+            <th>From</th>
+            <th></th>
+            <th>To</th>
+            <th>Value</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td scope="row">4min ago</td>
+            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
+            <td><span class="in">IN</span></td>
+            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
+            <td><strong>0.2644934</strong> PRSP</td>
+          </tr>
+          <tr>
+            <td scope="row">4min ago</td>
+            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
+            <td><span class="out">IN</span></td>
+            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
+            <td><strong>0.2644934</strong> PRSP</td>
+          </tr>
+          <tr>
+            <td scope="row">4min ago</td>
+            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
+            <td><span class="out">IN</span></td>
+            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
+            <td><strong>0.2644934</strong> PRSP</td>
+          </tr>
+          <tr>
+            <td scope="row">4min ago</td>
+            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
+            <td><span class="in">IN</span></td>
+            <td><strong>1P2B6KPTC73uJcBLVwKG5rPxkxn9peVw4V</strong></td>
+            <td><strong>0.2644934</strong> PRSP</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </section>
 </div>
