--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -574,6 +574,67 @@ h4{font-size: 12px;}
           border-radius: 50%;
           width: 160px;
         }
+        .no-title{
+          font-weight: 700;
+          font-size: 40px;
+        }
+        h1 {
+          color: $azul;
+        }
+        p.quem-sou{
+          font-family: $gotham;
+          font-weight: 400;
+          font-size: 12px;
+          color: $azul;
+          letter-spacing: 0.05em;
+          line-height: 2em;
+        }
+      }
+      h3 {
+        color: $azul;
+      }
+      .prsps-dist{
+        .table {
+          border: 0.5px solid $azulClaro;
+        }
+        .table-bordered > thead > tr > th,
+        .table-bordered > tbody > tr > th,
+        .table-bordered > tfoot > tr > th,
+        .table-bordered > thead > tr > td,
+        .table-bordered > tbody > tr > td,
+        .table-bordered > tfoot > tr > td {
+           border: 0.5px solid $azulClaro;
+        }
+        th{
+          color: $azul;
+          font-family: $gotham;
+          font-weight: 300;
+          font-size: 10px;
+          text-transform: uppercase;
+          text-align: center;
+        }
+        td{
+          color: $azul;
+          background-color: $branco;
+          text-transform: uppercase;
+          letter-spacing: 0.2em;
+          font-size: 12px;
+          padding: 20px;
+          vertical-align: middle;
+
+          span{
+            padding: 12px;
+            border-radius: 10%;
+            &.in{
+              background-color: $azulClaro;
+              color: $azul;
+            }
+            &.out{
+              background-color: $azul;
+              color: $branco;
+            }
+          }
+        }
       }
     }
 
