Adicionando controle para edição de nó

--- a/plataforma/static/dev/scss/_colors.scss
+++ b/plataforma/static/dev/scss/_colors.scss
@@ -4,6 +4,7 @@ $primeCinza: rgba(255, 80, 134, 1);
 
 $azul: rgba(17, 28, 60, 1);
 $azulClaro: rgba(33, 239, 233, 1);
+$azulclarin: rgba(111, 244, 241, 1);
 $azulObjeto: rgba(20, 92, 237, 1);
 $azulCinza: rgba(59, 70, 95, 1);
 
