--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -64,7 +64,7 @@
     </div>
   </section>
 
-  <section class="quemsomos-content">
+  <section id="quem-somos" class="quemsomos-content">
     <h3 class="text-center">+ QUEM SOMOS +</h3>
     <div class="video-container container">
       <div class="row">
@@ -100,7 +100,7 @@
     </div>
   </section>
 
-  <section class="contato-content">
+  <section id="contato" class="contato-content">
 
     <h3 class="text-center">+ CONTATO +</h3>
 
