--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -32,12 +32,12 @@
           <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
               <li><a class="scroll" href="{% url 'home' %}">Prospera</a></li>
-              <li><a class="scroll" href="#programacao">Quem Somos</a></li>
+              <li><a class="scroll" href="{% url 'home' %}#quem-somos">Quem Somos</a></li>
               <li><a class="scroll" href="{% url 'nos_list' %}">Comunidades</a></li>
-              <li><a class="scroll" href="#contato">Contato</a></li>
+              <li><a class="scroll" href="{% url 'home' %}#contato">Contato</a></li>
               {% if user.id %}
               <li>
-                <a class="scroll" id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user }}</a>
+                <a href="#" class="scroll" id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user }}</a>
                 <ul class="dropdown-menu" aria-labelledby="dLabel">
                   <li><a href="{% url "no_detail" %}">Perfil</a></li>
                   <li><a href="{% url "logout" %}">Sair</a></li>
