Fixando altura para thumbs

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -326,6 +326,7 @@ h4{font-size: 12px;}
           .thumbnail{
             background-color: $azul;
             border: 1px solid $azul;
+            height: 380px;
 
             .plus{
               font-size: 74px;
