--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -44,7 +44,7 @@
                 </ul>
               </li>
               {% else %}
-                <li><a class="scroll" id="nav-login">Entrar</a></li>
+                <li><a href="#" class="scroll" id="nav-login">Entrar</a></li>
               {% endif %}
             </ul>
           </div><!-- /.navbar-collapse -->
