--- a/plataforma/templates/pages/partial_login.html
+++ b/plataforma/templates/pages/partial_login.html
@@ -14,6 +14,9 @@
         <p class="help-block"></p>
         <span class="help-block forgot"><a href="" style="text-transform: none;">Esqueci minha senha</a></span>
       </div>
+      <div class="has-error">
+        <p id="__all__" class="help-block"></p>
+      </div>
       <button class="btn btn-prospera btn-lg" type="submit" style="margin-top: 40px;">Entrar</button>
     </form>
   <!-- </div> -->
