Quebrando texto em colunas

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -539,6 +539,9 @@ h4{font-size: 12px;}
         color: $branco;
         letter-spacing: 0.05em;
         line-height: 2em;
+        // column-count: 2;
+        // column-gap: 20px;
+        column-width: 400px;
       }
       .contato-content{
         margin: auto;
