Adicionando justify em descrição do objeto

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -540,7 +540,7 @@ h4{font-size: 12px;}
         letter-spacing: 0.05em;
         line-height: 2em;
         // column-count: 2;
-        // column-gap: 20px;
+        column-gap: 45px;
         column-width: 400px;
       }
       .contato-content{
