--- a/plataforma/templates/pages/object_detail.html
+++ b/plataforma/templates/pages/object_detail.html
@@ -28,7 +28,7 @@
     </section>
 
     <section class="container">
-      <p class="description">{{ objeto.descricao }}</p>
+      <p class="description text-justify">{{ objeto.descricao }}</p>
     </section>
 
     {% if objeto.contato_facebook or objeto.contato_whatsapp or objeto.contato_zoom  %}
